--- a/configs/default_runtime.yaml
+++ b/configs/default_runtime.yaml
@@ -2,8 +2,8 @@ trainer:
   logger:
     class_path: lightning_template.utils.loggers.wandb.WandbNamedLogger
     init_args:
-      project: default_project_name
-      entity: null
+      project: UNC-Project
+      entity: wloner0809
       save_dir: work_dirs
       offline: false
       tags: []
