--- a/configs/datasets/medmcqa/medmcqa.yaml
+++ b/configs/datasets/medmcqa/medmcqa.yaml
@@ -17,11 +17,24 @@ data:
         - init_args:
             subset: test
     dataloader_cfg:
-      batch_size: 16
+      batch_size: 8
       # num_workers: 8
       # persistent_workers: true
       prefetch_factor: null
       pin_memory: true
+      collate_fn:
+        class_path: transformers.DataCollatorForSeq2Seq
+        init_args: 
+          tokenizer:
+            class_path: transformers.LlamaTokenizer
+            init_args: 
+              vocab_file: "/data/terencewang/llama2-hf/tokenizer.model"
+              pad_token: "<unk>"
+              pad_token_id: 0
+              padding_side: "left"
+              legacy: false
+          padding: true
+          pad_to_multiple_of: 8
 
 trainer:
   logger:
