--- a/configs/default_runtime.yaml
+++ b/configs/default_runtime.yaml
@@ -54,7 +54,7 @@ trainer:
   num_nodes: 1
   accelerator: auto
   devices: auto
-  precision: bf16-true
+  precision: 32
 
   sync_batchnorm: false
   accumulate_grad_batches: 1
