--- a/configs/default_runtime.yaml
+++ b/configs/default_runtime.yaml
@@ -5,7 +5,7 @@ trainer:
       project: UNC-Project
       entity: wloner0809
       save_dir: work_dirs
-      name: Medmcqa_llama_lora_freeze
+      name: Medmcqa_llama_freeze
       offline: false
       tags: []
   # not save ckpt here for saving disk space
